Improve sorting and filtering. Error handling for failing ajax request, added meaningful comments across code

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@ hgroup {
     align-self: end;
 }
 
+.error-message {
+  text-align: center;
+}
+
 .navigation-control {
   display: flex;
   justify-content: center;
